# starter-pack-scanner

./: README.md  pyproject.toml
starter_pack_scanner/: __main__.py  cli.py  scanner.py
starter_pack_scanner/checks/: __init__.py  base.py  docs_location.py  readme_docs_link.py  readme_rtd_badge.py  version_check.py
